# rust_arbitrage

./: Cargo.toml  test  trade.paths  trade.tickers
src/: binance.rs  main.rs  money_safe_math.rs  path.rs  path_list.rs  ticker.rs  ticker_list.rs
