[package]
name = "websocket_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
serde_json = "1.0.88"
serde = { version = "1.0.147", features = ["derive"] }
crossbeam-utils = "0.8.14"
regex = "1"
rust_decimal = "1.27"
rust_decimal_macros = "1.27"